CommandPopover: Fix scrollbar style on some websites

--- a/src/contentScript/commandPopover/CommandPopover.scss
+++ b/src/contentScript/commandPopover/CommandPopover.scss
@@ -24,6 +24,14 @@
 @import "@/themes/colors.scss";
 
 .root {
+  // All widgets should start with zero style
+  // https://github.com/pixiebrix/pixiebrix-extension/issues/7670
+  all: initial;
+
+  // Avoid dark scrollbar on dark websites
+  // https://github.com/pixiebrix/pixiebrix-extension/pull/7699
+  color-scheme: light;
+
   height: 200px;
   width: 240px;
   display: flex;
